# ScreenRecorder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ScreenRecorderInstaller.iss  appicon.rc  commandlinedefinations.h  main.cpp  resource.qrc
dialogs/: backgroundwindow.cpp  backgroundwindow.h  countdowndialog.cpp  countdowndialog.h  countdowndialog.ui  dragmovedialog.cpp  dragmovedialog.h  framelessdialog.cpp  framelessdialog.h  logindialog.cpp  logindialog.h  logindialog.ui  minimizedrecordingwindow.cpp  minimizedrecordingwindow.h  minimizedrecordingwindow.ui  recordingwindow.cpp  recordingwindow.h  recordingwindow.ui  testwindow.cpp  testwindow.h  testwindow.ui  updatenoticedialog.cpp  updatenoticedialog.h  updatenoticedialog.ui  usermessagebox.cpp  usermessagebox.h  usermessagebox.ui
dialogs/preview/: uploadnoticewindow.cpp  uploadnoticewindow.h  uploadnoticewindow.ui  videopreviewdialog.cpp  videopreviewdialog.h  videopreviewdialog.ui  videorenderer.h
dialogs/upload/: cloumnchoosenwidget.cpp  cloumnchoosenwidget.h  cloumnchoosenwidget.ui  cloumnmodel.cpp  cloumnmodel.h  createfolderdialog.cpp  createfolderdialog.h  createfolderdialog.ui  disableview.cpp  disableview.h  disableview.ui  foldermodel.cpp  foldermodel.h  networkcolumnandfoklerwidget.cpp  networkcolumnandfoklerwidget.h  networkcolumnandfoklerwidget.ui  uploadoperator.cpp  uploadoperator.h  uploadpathwidget.cpp  uploadpathwidget.h
helper/: config.h  debug.cpp  debug.h  extensionmethods.h  obswrapper.cpp  obswrapper.h  optionnalchain.h  qoperationhelper.h  signalproxy.cpp  signalproxy.h
obs-plugins/cmake/: janssonConfig.cmake  janssonConfigVersion.cmake  janssonTargets-release.cmake  janssonTargets.cmake  websocketpp-configVersion.cmake
obs-plugins/include/: x264_config.h
obs-plugins/include/ajadriver/: ntv2infoframe.h
obs-plugins/include/libavutil/: ffversion.h  rational.h
obs-plugins/include/vlc/: libvlc.h  libvlc_media_player.h
obs-plugins/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  cmocka.lib  datachannel.lib  detours.lib  freetype.lib  jansson.lib  libcarla_utils.lib  libcurl_imp.lib  libmbedcrypto.lib  libmbedtls.lib  libmbedx509.lib  librist.lib  libsrt.lib  libx264.lib  lua51.lib  mbedcrypto.lib  mbedtls.lib  mbedx509.lib  qrcodegencpp.lib  qrcodegencppd.lib  rnnoise.lib  speexdsp.lib  swresample.lib  swscale.lib  vpl.lib  zlib.lib  zstd_static.lib
obs-plugins/lib/cmake/LibDataChannel/: LibDataChannelConfigVersion.cmake  LibDataChannelTargets-release.cmake  LibDataChannelTargets.cmake
obs-plugins/lib/cmake/MbedTLS/: MbedTLSTargets-release.cmake  MbedTLSTargets.cmake
obs-plugins/lib/cmake/cmocka/: cmocka-config-release.cmake  cmocka-config.cmake
obs-plugins/lib/cmake/qrcodegencpp/: qrcodegencpp-config-version.cmake  qrcodegencpp-config.cmake  qrcodegencpp-targets-debug.cmake  qrcodegencpp-targets-release.cmake  qrcodegencpp-targets.cmake
obs-plugins/lib/cmake/zstd/: zstdTargets-release.cmake  zstdTargets.cmake
obs-plugins/lib/pkgconfig/: carla-utils.pc  cmocka.pc  freetype2.pc  jansson.pc  libcurl.pc  libzstd.pc  qrcodegencpp.pc
obs-plugins/share/pkgconfig/: nlohmann_json.pc
obs-plugins/swig/Lib/: swigwarn.swg
obs-plugins/swig/Lib/python/: pyhead.swg
obs/lib/Debug/: obs.lib
obs/lib/Release/: obs.lib
widgets/: volumecontrol.cpp  volumecontrol.h
